# S3GF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
.gitee/ISSUE_TEMPLATE/: 1_help_request.md  3_feature_request.md  bug_report_form.yml  feature_request_form.yml  help_request_form.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  1_bug_report.md  2-bug.yml  2_bug_report_zh.md  3_feature_request.md  4_feature_request_zh.md  5_help_request.md  6_help_request_zh.md  config.yml
.github/workflows/: dependencies.yml
GTest/: CMakeLists.txt
GTest/UnitTests/: test_window.cpp
cmake/: MyEngineConfig.cmake.in
docs/: Doxyfile  mainpage.md
docs/docbook/: _basic_8h.xml  _basic_8h_source.xml  _collider_8h_source.xml  _control_8h_source.xml  _core_8h_source.xml  _cursor_8h_source.xml  _date_time_8h_source.xml  _draw_8h_source.xml  _libs_8h_source.xml  _logger_8h_source.xml  _queue_8h_source.xml  _random_8h_source.xml  _thread_pool_8h_source.xml  annotated.xml  class_s3_g_f_1_1_abstract_control.xml  class_s3_g_f_1_1_click_area.xml  class_s3_g_f_1_1_date_time.xml  class_s3_g_f_1_1_event_system.xml  class_s3_g_f_1_1_graphics_1_1_ellipse.xml  class_s3_g_f_1_1_graphics_1_1_point.xml  class_s3_g_f_1_1_graphics_1_1_rectangle.xml  class_s3_g_f_1_1_graphics_1_1_triangle.xml  class_s3_g_f_1_1_logger.xml  class_s3_g_f_1_1_random_generator.xml  class_s3_g_f_1_1_renderer.xml  class_s3_g_f_1_1_task_queue.xml  class_s3_g_f_1_1_tasks_manager.xml  class_s3_g_f_1_1_thread_pool.xml  class_s3_g_f_1_1_window.xml  index.xml  namespace_s3_g_f.xml  namespace_std_color.xml  struct_s3_g_f_1_1_tasks_manager_1_1_task.xml  struct_s3_g_f_1_1_tasks_manager_1_1_task_cmp.xml
docs/en/: Doxyfile
docs/en/comments/: Basic.dox
docs/en/html/: _basic_8dox.html  _basic_8h.html  _basic_8h.js  _basic_8h_source.html  _button_8cpp.html  _button_8h.html  _button_8h_source.html  _collider_8h.html  _collider_8h_source.html  _components_8cpp.html  _components_8h.html  _components_8h_source.html  _control_8cpp.html  _control_8h.html  _control_8h.js  _control_8h_source.html  _core_8cpp.html  _core_8h.html  _core_8h_source.html  _cursor_8h.html  _cursor_8h_source.html  _date_time_8h.html  _date_time_8h_source.html  _draw_8h.html  _draw_8h.js  _draw_8h_source.html  _file_system_8cpp.html  _file_system_8h.html  _file_system_8h_source.html  _libs_8h.html  _libs_8h_source.html  _logger_8h.html  _logger_8h_source.html  _multi_thread_2_components_8cpp.html  _multi_thread_2_components_8h.html  _multi_thread_2_components_8h_source.html  _queue_8h.html  _queue_8h_source.html  _r_g_b_a_color_8h.html  _r_g_b_a_color_8h_source.html  (+221 more)
docs/html/: _basic_8h.html  _basic_8h.js  _basic_8h_source.html  _button_8cpp.html  _button_8h.html  _button_8h.js  _button_8h_source.html  _collider_8h.html  _collider_8h.js  _collider_8h_source.html  _components_8cpp.html  _components_8h.html  _components_8h.js  _components_8h_source.html  _control_8cpp.html  _control_8h.html  _control_8h.js  _control_8h_source.html  _core_8cpp.html  _core_8h.html  _core_8h.js  _core_8h_source.html  _cursor_8h.html  _cursor_8h_source.html  _date_time_8h.html  _date_time_8h_source.html  _draw_8h.html  _draw_8h.js  _draw_8h_source.html  _file_system_8cpp.html  _file_system_8h.html  _file_system_8h_source.html  _libs_8h.html  _libs_8h_source.html  _logger_8h.html  _logger_8h.js  _logger_8h_source.html  _multi_thread_2_components_8cpp.html  _multi_thread_2_components_8h.html  _multi_thread_2_components_8h_source.html  (+242 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_1d.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_c.js  classes_d.js  defines_2.js  enums_1.js  enums_5.js  enums_6.js  enums_7.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+67 more)
docs/man/man3/: Basic.h.3  Button.cpp.3  Button.h.3  Collider.h.3  Components.cpp.3  Components.h.3  Control.cpp.3  Control.h.3  Core.cpp.3  Core.h.3  Cursor.h.3  D__Coding_S3GF_src_.3  D__Coding_S3GF_src_Algorithm_.3  D__Coding_S3GF_src_Controls_.3  D__Coding_S3GF_src_MultiThread_.3  D__Coding_S3GF_src_Utils_.3  DateTime.h.3  Draw.h.3  FileSystem.cpp.3  FileSystem.h.3  Graphics.3  Libs.h.3  Logger.h.3  Queue.h.3  RGBAColor.3  RGBAColor.h.3  Random.h.3  S3GF.3  S3GF_AbstractControl.3  S3GF_Algorithm.3  S3GF_AudioSystem.3  S3GF_AudioSystem_Audio.3  S3GF_Button.3  S3GF_Button_ButtonSkin.3  S3GF_ClickArea.3  S3GF_ColorStatus.3  S3GF_Cursor.3  S3GF_Cursor_UserCustom.3  S3GF_Cursor_UserCustom_HotPoint.3  S3GF_DateTime.3  (+44 more)
docs/templates/: Doxyfile  README.md
docs/templates/dox/: Basic.dox  DateTime.dox  RGBAColor.dox  RandomGenerator.dox  SysMemory.dox  Variant.dox
docs/templates/related/: ColorMap.md  LICENSE.md  Matrix2D.md  RGBAColorMap.md
docs/zh/: Doxyfile
docs/zh/comments/: Basic.dox
docs/zh_SC/: Doxyfile
src/: Basic.h  Components.cpp  Components.h  Core.cpp  Core.h  Exception.h  Libs.h  MyEngine
src/Algorithm/: All  Collider.h  Draw.h
src/Controls/: Button.cpp  Button.h  Control.cpp  Control.h
src/Game/: Collider.cpp  Collider.h  GObject.cpp  GObject.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
src/MultiThread/: All  Components.cpp  Components.h  Queue.h  ThreadPool.h
src/Renderer/: BaseCommand.cpp  BaseCommand.h  CommandFactory.h  CommandPool.cpp  CommandPool.h
src/Sprite/: Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
src/Template/: Singleton.h
src/Utils/: All  Cursor.h  DateTime.h  FileSystem.cpp  FileSystem.h  Logger.h  Queue.h  RGBAColor.h  Random.cpp  Random.h  Variant.cpp  Variant.h
src/Widgets/: AbstractWidget.cpp  AbstractWidget.h  Button.cpp  Button.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  ScrollBar.h
templates/: CustomRenderCommand.h  NewWindow.cpp  NewWindow.h  main.cpp
test/: CMakeLists.txt  FilledWin.h  MyWindow.h  main.cpp  main.cpp.old  testGraphic.cpp  testTaskManager.cpp
test/assets/: noname.txt
(+153 files in other folders)
